sms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-model-depl
  labels:
    app: sms-model
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sms-model
  template:
    metadata:
      labels:
        app: sms-model
    spec:
      containers:
      - name: sms-model
        image: proksch/sms-spam-detection
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sms-model-svc
spec:
  selector:
    app: sms-model
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-web-depl
  labels:
    app: sms-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sms-web
  template:
    metadata:
      labels:
        app: sms-web
    spec:
      containers:
      - name: sms-web
        image: proksch/myweb
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sms-web-svc
spec:
  selector:
    app: sms-web
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  defaultBackend:
    service:
      name: sms-web-svc
      port:
        number: 8080
