volumes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showenv-deployment
  labels:
    app: showenv
spec:
  replicas: 3
  selector:
    matchLabels:
      app: showenv
  template:
    metadata:
      labels:
        app: showenv
    spec:
      containers:
      - name: showenv
        image: proksch/showenv
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /internal-data
          name: test-volume
      volumes:
      - name: test-volume
        hostPath:
          path: /data
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: showenv
  ports:
    - port: 1234
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: my-service
      port:
        number: 1234
